Thu Nov  9 15:22:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/wrapper_macros.GNU:
          Default threads to 1 if not set, thanks to Chad for helping out
          with finding out why I had a problem in the rtems build

Thu Nov  9 12:46:54 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/config/acedefaults.mpb:
        * bin/MakeProjectCreator/config/taodefaults.mpb:

          Add automake specific section to subtract out $(ACE_ROOT)/lib
          from libpaths, as libraries are not copied to, or linked from,
          there in automake builds.  This removes unnecessary -L's from
          being added to *_LDFLAGS, sometimes eliminating the need for
          that automake variable altogether.

Thu Nov  9 10:48:52 UTC 2006  Olli Savia  <ops@iki.fi>

        * examples/IPC_SAP/DEV_SAP/reader/reader.cpp:
        * examples/IPC_SAP/DEV_SAP/writer/writer.cpp:
          Changed used baudrate to 19200. Extended reader example to handle
          timeout.

Thu Nov  9 10:50:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_Heap_T.{h,cpp}:
          Changed the preallocated constructor from int to bool.

Thu Nov  9 09:25:48 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/TTY_IO.cpp:
          Removed LynxOS 3.x specific workaround.

Wed Nov  8 22:22:27 UTC 2006  Steve Huston  <shuston@riverace.com>

        * bin/make_release: Re-applied this:
          Sat Oct 28 20:10:42 UTC 2006  Steve Huston  <shuston@riverace.com>

Wed Nov  8 22:12:46 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.cpp:

        This resolves a problem with shutting down the Service
        Configurator via the static ACE_Service_Config::close () method,
        where the registered services' fini() methods were not being
        called. For full details, see bugzilla# 2701. Thanks to Aaron